# dary

./: AUTHORS  Doxyfile.in  Makefile.am  README  README.ja  configure.ac  dary.pc.in
doc/: Makefile.am  dary.css  howto.html  index.html
sample/: Makefile.am  sample.c
src/: Makefile.am  build.c  dary.c  dary.h  debug.c  debug.h  search.c
test/: Makefile.am  da-gcanna.c  gcanna.c  hash-gcanna.c  test1.c
